@@ -39,7 +39,7 @@ namespace GraphX
         IOverlapRemovalParameters DefaultOverlapRemovalAlgorithmParams { get; set; }
         IEdgeRoutingParameters DefaultEdgeRoutingAlgorithmParams { get; set; }
 
-
+        void ComputeEdgeRoutesByVertex(TVertex dataVertex, Point? vertexPosition = null, Size? vertexSize = null);
         void CreateNewAlgorithmFactory();
         void CreateNewAlgorithmStorage(IExternalLayout<TVertex> layout, IExternalOverlapRemoval<TVertex> or, IExternalEdgeRouting<TVertex, TEdge> er);
 
